--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" href="Public/styles.css"/>
     </head>
     <body>
-        <h1>Team [replace with team number]</h1> <!-- ADD YOUR TEAM NUMBER -->
+        <h1>Team Periwinkle Pukwudgies</h1> <!-- ADD YOUR TEAM NUMBER -->
         <table>
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Major</th>
-                    <th>Yea 2r</th>
+                    <th>Year</th>
                     <th>Fun Fact</th>
                 </tr>
             </thead>
@@ -23,6 +23,12 @@
                     <td>Computer Science</td>
                     <td>Super Senior</td>
                     <td>I have a green body, no visible nose, and live in a trash.</td>
+                </tr>
+                <tr>
+                    <td>Michael Nicolas</td>
+                    <td>Robotics Engineering</td>
+                    <td>Sophmore</td>
+                    <td>I like to work on cars in my spare time.</td>
                 </tr>
                 <!-- Add a row to the table and fill it in with your information  Add your row above this section! -->
                 <!-- (1) "git add index.html" - Tell git to include index.html in the next revision of the repository -->
