--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                     <td>Sophomore</td>
                     <td>I am an Eagle Scout.</td>
                 </tr>
+                <tr>
+                    <td>Alex Santagata</td>
+                    <td>Computer Science</td>
+                    <td>Junior</td>
+                    <td>I have a dog and 2 cats</td>
+                </tr>
+
                 <!-- Add a row to the table and fill it in with your information  Add your row above this section! -->
                 <!-- (1) "git add index.html" - Tell git to include index.html in the next revision of the repository -->
                 <!-- (2) "git commit -m"[your name]"" - Tells git to save a version of the repository with your new changes -->
