update html - mai

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                     <td>Junior</td>
                     <td>I have a dog and 2 cats</td>
                 </tr>
+                <tr>
+                    <td>Phuong Mai Do</td>
+                    <td>Computer Science and IMGD</td>
+                    <td>Junior</td>
+                    <td>I have 3 cats</td>
+                </tr>
 
                 <!-- Add a row to the table and fill it in with your information  Add your row above this section! -->
                 <!-- (1) "git add index.html" - Tell git to include index.html in the next revision of the repository -->
