--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                     <td>Junior</td>
                     <td>I have 3 cats</td>
                 </tr>
+                <tr>
+                    <td>Ryan Griffin</td>
+                    <td>Computer Science</td>
+                    <td>Sophomore</td>
+                    <td>I am a twin</td>
+                </tr>
 
                 <!-- Add a row to the table and fill it in with your information  Add your row above this section! -->
                 <!-- (1) "git add index.html" - Tell git to include index.html in the next revision of the repository -->
