--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                     <td>I am a twin</td>
                 </tr>
 
+                <tr>
+                    <td>Caleb Corpuz</td>
+                    <td>Robotics Engineering</td>
+                    <td>Sophomore</td>
+                    <td>I'm a black belt in Tae Kwan Do</td>
+                </tr>
+
                 <!-- Add a row to the table and fill it in with your information  Add your row above this section! -->
                 <!-- (1) "git add index.html" - Tell git to include index.html in the next revision of the repository -->
                 <!-- (2) "git commit -m"[your name]"" - Tells git to save a version of the repository with your new changes -->
