--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                     <td>I'm a black belt in Tae Kwan Do</td>
                 </tr>
 
+                <tr>
+                    <td>Zhongyi Tong</td>
+                    <td> Computer science</td>
+                    <td>Sophomore</td>
+                    <td>Love video games</td>
+                </tr>
                 <!-- Add a row to the table and fill it in with your information  Add your row above this section! -->
                 <!-- (1) "git add index.html" - Tell git to include index.html in the next revision of the repository -->
                 <!-- (2) "git commit -m"[your name]"" - Tells git to save a version of the repository with your new changes -->
